Compilador::Pascal/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PROCEDURE

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON program_block DOT
Rule 2     block -> declarations compound_statement
Rule 3     program_block -> function_declarations declarations compound_statement
Rule 4     program_block -> declarations compound_statement
Rule 5     declarations -> VAR declaration_list
Rule 6     declarations -> empty
Rule 7     declaration_list -> declaration_list declaration
Rule 8     declaration_list -> declaration
Rule 9     declaration -> id_list COLON type SEMICOLON
Rule 10    function_declarations -> function_declaration
Rule 11    function_declaration -> FUNCTION ID formal_parameters COLON type SEMICOLON block SEMICOLON
Rule 12    formal_parameters -> LPAREN parameter_list RPAREN
Rule 13    formal_parameters -> LPAREN RPAREN
Rule 14    parameter_list -> parameter
Rule 15    parameter -> id_list COLON type
Rule 16    id_list -> id_list COMMA ID
Rule 17    id_list -> ID
Rule 18    type -> INTEGER
Rule 19    type -> BOOLEAN
Rule 20    type -> STRING
Rule 21    type -> array_type
Rule 22    array_type -> ARRAY LBRACKET INTEGER_CONST DOTDOT INTEGER_CONST RBRACKET OF type
Rule 23    compound_statement -> BEGIN statement_list END
Rule 24    statement_list -> statement_list SEMICOLON statement
Rule 25    statement_list -> statement
Rule 26    statement -> assignment_statement
Rule 27    statement -> if_statement
Rule 28    statement -> while_statement
Rule 29    statement -> for_statement
Rule 30    statement -> procedure_call
Rule 31    statement -> compound_statement
Rule 32    statement -> empty
Rule 33    assignment_statement -> variable ASSIGN expression
Rule 34    if_statement -> IF expression THEN statement
Rule 35    if_statement -> IF expression THEN statement ELSE statement
Rule 36    while_statement -> WHILE expression DO statement
Rule 37    for_statement -> FOR ID ASSIGN expression TO expression DO statement
Rule 38    for_statement -> FOR ID ASSIGN expression DOWNTO expression DO statement
Rule 39    procedure_call -> ID LPAREN expression_list RPAREN
Rule 40    procedure_call -> ID LPAREN RPAREN
Rule 41    procedure_call -> WRITELN LPAREN expression_list RPAREN
Rule 42    procedure_call -> WRITELN LPAREN RPAREN
Rule 43    procedure_call -> WRITE LPAREN expression_list RPAREN
Rule 44    procedure_call -> WRITE LPAREN RPAREN
Rule 45    procedure_call -> READLN LPAREN variable_list RPAREN
Rule 46    procedure_call -> READLN LPAREN RPAREN
Rule 47    procedure_call -> READ LPAREN variable_list RPAREN
Rule 48    procedure_call -> READ LPAREN RPAREN
Rule 49    expression_list -> expression_list COMMA expression
Rule 50    expression_list -> expression
Rule 51    variable_list -> variable_list COMMA variable
Rule 52    variable_list -> variable
Rule 53    expression -> simple_expression
Rule 54    expression -> simple_expression relational_operator simple_expression
Rule 55    relational_operator -> EQUAL
Rule 56    relational_operator -> NOTEQUAL
Rule 57    relational_operator -> LESSTHAN
Rule 58    relational_operator -> LESSEQUAL
Rule 59    relational_operator -> GREATERTHAN
Rule 60    relational_operator -> GREATEREQUAL
Rule 61    simple_expression -> term
Rule 62    simple_expression -> simple_expression additive_operator term
Rule 63    additive_operator -> PLUS
Rule 64    additive_operator -> MINUS
Rule 65    term -> factor
Rule 66    term -> term multiplicative_operator factor
Rule 67    multiplicative_operator -> TIMES
Rule 68    multiplicative_operator -> DIVIDE
Rule 69    multiplicative_operator -> DIV
Rule 70    multiplicative_operator -> MOD
Rule 71    multiplicative_operator -> AND
Rule 72    expression -> expression AND expression
Rule 73    expression -> expression OR expression
Rule 74    expression -> NOT expression
Rule 75    factor -> variable
Rule 76    factor -> INTEGER_CONST
Rule 77    factor -> REAL_CONST
Rule 78    factor -> STRING_CONST
Rule 79    factor -> LPAREN expression RPAREN
Rule 80    factor -> function_call
Rule 81    factor -> TRUE
Rule 82    factor -> FALSE
Rule 83    function_call -> ID LPAREN expression_list RPAREN
Rule 84    function_call -> ID LPAREN RPAREN
Rule 85    variable -> ID
Rule 86    variable -> ID LBRACKET expression RBRACKET
Rule 87    empty -> <empty>

Terminals, with rules where they appear

AND                  : 71 72
ARRAY                : 22
ASSIGN               : 33 37 38
BEGIN                : 23
BOOLEAN              : 19
COLON                : 9 11 15
COMMA                : 16 49 51
DIV                  : 69
DIVIDE               : 68
DO                   : 36 37 38
DOT                  : 1
DOTDOT               : 22
DOWNTO               : 38
ELSE                 : 35
END                  : 23
EQUAL                : 55
FALSE                : 82
FOR                  : 37 38
FUNCTION             : 11
GREATEREQUAL         : 60
GREATERTHAN          : 59
ID                   : 1 11 16 17 37 38 39 40 83 84 85 86
IF                   : 34 35
INTEGER              : 18
INTEGER_CONST        : 22 22 76
LBRACKET             : 22 86
LESSEQUAL            : 58
LESSTHAN             : 57
LPAREN               : 12 13 39 40 41 42 43 44 45 46 47 48 79 83 84
MINUS                : 64
MOD                  : 70
NOT                  : 74
NOTEQUAL             : 56
OF                   : 22
OR                   : 73
PLUS                 : 63
PROCEDURE            : 
PROGRAM              : 1
RBRACKET             : 22 86
READ                 : 47 48
READLN               : 45 46
REAL_CONST           : 77
RPAREN               : 12 13 39 40 41 42 43 44 45 46 47 48 79 83 84
SEMICOLON            : 1 9 11 11 24
STRING               : 20
STRING_CONST         : 78
THEN                 : 34 35
TIMES                : 67
TO                   : 37
TRUE                 : 81
VAR                  : 5
WHILE                : 36
WRITE                : 43 44
WRITELN              : 41 42
error                : 

Nonterminals, with rules where they appear

additive_operator    : 62
array_type           : 21
assignment_statement : 26
block                : 11
compound_statement   : 2 3 4 31
declaration          : 7 8
declaration_list     : 5 7
declarations         : 2 3 4
empty                : 6 32
expression           : 33 34 35 36 37 37 38 38 49 50 72 72 73 73 74 79 86
expression_list      : 39 41 43 49 83
factor               : 65 66
for_statement        : 29
formal_parameters    : 11
function_call        : 80
function_declaration : 10
function_declarations : 3
id_list              : 9 15 16
if_statement         : 27
multiplicative_operator : 66
parameter            : 14
parameter_list       : 12
procedure_call       : 30
program              : 0
program_block        : 1
relational_operator  : 54
simple_expression    : 53 54 54 62
statement            : 24 25 34 35 35 36 37 38
statement_list       : 23 24
term                 : 61 62 66
type                 : 9 11 15 22
variable             : 33 51 52 75
variable_list        : 45 47 51
while_statement      : 28

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON program_block DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON program_block DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON program_block DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . program_block DOT
    (3) program_block -> . function_declarations declarations compound_statement
    (4) program_block -> . declarations compound_statement
    (10) function_declarations -> . function_declaration
    (5) declarations -> . VAR declaration_list
    (6) declarations -> . empty
    (11) function_declaration -> . FUNCTION ID formal_parameters COLON type SEMICOLON block SEMICOLON
    (87) empty -> .

    VAR             shift and go to state 9
    FUNCTION        shift and go to state 11
    BEGIN           reduce using rule 87 (empty -> .)

    program_block                  shift and go to state 5
    function_declarations          shift and go to state 6
    declarations                   shift and go to state 7
    function_declaration           shift and go to state 8
    empty                          shift and go to state 10

state 5

    (1) program -> PROGRAM ID SEMICOLON program_block . DOT

    DOT             shift and go to state 12


state 6

    (3) program_block -> function_declarations . declarations compound_statement
    (5) declarations -> . VAR declaration_list
    (6) declarations -> . empty
    (87) empty -> .

    VAR             shift and go to state 9
    BEGIN           reduce using rule 87 (empty -> .)

    declarations                   shift and go to state 13
    empty                          shift and go to state 10

state 7

    (4) program_block -> declarations . compound_statement
    (23) compound_statement -> . BEGIN statement_list END

    BEGIN           shift and go to state 15

    compound_statement             shift and go to state 14

state 8

    (10) function_declarations -> function_declaration .

    VAR             reduce using rule 10 (function_declarations -> function_declaration .)
    BEGIN           reduce using rule 10 (function_declarations -> function_declaration .)


state 9

    (5) declarations -> VAR . declaration_list
    (7) declaration_list -> . declaration_list declaration
    (8) declaration_list -> . declaration
    (9) declaration -> . id_list COLON type SEMICOLON
    (16) id_list -> . id_list COMMA ID
    (17) id_list -> . ID

    ID              shift and go to state 19

    declaration_list               shift and go to state 16
    declaration                    shift and go to state 17
    id_list                        shift and go to state 18

state 10

    (6) declarations -> empty .

    BEGIN           reduce using rule 6 (declarations -> empty .)


state 11

    (11) function_declaration -> FUNCTION . ID formal_parameters COLON type SEMICOLON block SEMICOLON

    ID              shift and go to state 20


state 12

    (1) program -> PROGRAM ID SEMICOLON program_block DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON program_block DOT .)


state 13

    (3) program_block -> function_declarations declarations . compound_statement
    (23) compound_statement -> . BEGIN statement_list END

    BEGIN           shift and go to state 15

    compound_statement             shift and go to state 21

state 14

    (4) program_block -> declarations compound_statement .

    DOT             reduce using rule 4 (program_block -> declarations compound_statement .)


state 15

    (23) compound_statement -> BEGIN . statement_list END
    (24) statement_list -> . statement_list SEMICOLON statement
    (25) statement_list -> . statement
    (26) statement -> . assignment_statement
    (27) statement -> . if_statement
    (28) statement -> . while_statement
    (29) statement -> . for_statement
    (30) statement -> . procedure_call
    (31) statement -> . compound_statement
    (32) statement -> . empty
    (33) assignment_statement -> . variable ASSIGN expression
    (34) if_statement -> . IF expression THEN statement
    (35) if_statement -> . IF expression THEN statement ELSE statement
    (36) while_statement -> . WHILE expression DO statement
    (37) for_statement -> . FOR ID ASSIGN expression TO expression DO statement
    (38) for_statement -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (39) procedure_call -> . ID LPAREN expression_list RPAREN
    (40) procedure_call -> . ID LPAREN RPAREN
    (41) procedure_call -> . WRITELN LPAREN expression_list RPAREN
    (42) procedure_call -> . WRITELN LPAREN RPAREN
    (43) procedure_call -> . WRITE LPAREN expression_list RPAREN
    (44) procedure_call -> . WRITE LPAREN RPAREN
    (45) procedure_call -> . READLN LPAREN variable_list RPAREN
    (46) procedure_call -> . READLN LPAREN RPAREN
    (47) procedure_call -> . READ LPAREN variable_list RPAREN
    (48) procedure_call -> . READ LPAREN RPAREN
    (23) compound_statement -> . BEGIN statement_list END
    (87) empty -> .
    (85) variable -> . ID
    (86) variable -> . ID LBRACKET expression RBRACKET

    IF              shift and go to state 32
    WHILE           shift and go to state 33
    FOR             shift and go to state 34
    ID              shift and go to state 35
    WRITELN         shift and go to state 36
    WRITE           shift and go to state 37
    READLN          shift and go to state 38
    READ            shift and go to state 39
    BEGIN           shift and go to state 15
    END             reduce using rule 87 (empty -> .)
    SEMICOLON       reduce using rule 87 (empty -> .)

    statement_list                 shift and go to state 22
    statement                      shift and go to state 23
    assignment_statement           shift and go to state 24
    if_statement                   shift and go to state 25
    while_statement                shift and go to state 26
    for_statement                  shift and go to state 27
    procedure_call                 shift and go to state 28
    compound_statement             shift and go to state 29
    empty                          shift and go to state 30
    variable                       shift and go to state 31

state 16

    (5) declarations -> VAR declaration_list .
    (7) declaration_list -> declaration_list . declaration
    (9) declaration -> . id_list COLON type SEMICOLON
    (16) id_list -> . id_list COMMA ID
    (17) id_list -> . ID

    BEGIN           reduce using rule 5 (declarations -> VAR declaration_list .)
    ID              shift and go to state 19

    declaration                    shift and go to state 40
    id_list                        shift and go to state 18

state 17

    (8) declaration_list -> declaration .

    ID              reduce using rule 8 (declaration_list -> declaration .)
    BEGIN           reduce using rule 8 (declaration_list -> declaration .)


state 18

    (9) declaration -> id_list . COLON type SEMICOLON
    (16) id_list -> id_list . COMMA ID

    COLON           shift and go to state 41
    COMMA           shift and go to state 42


state 19

    (17) id_list -> ID .

    COLON           reduce using rule 17 (id_list -> ID .)
    COMMA           reduce using rule 17 (id_list -> ID .)


state 20

    (11) function_declaration -> FUNCTION ID . formal_parameters COLON type SEMICOLON block SEMICOLON
    (12) formal_parameters -> . LPAREN parameter_list RPAREN
    (13) formal_parameters -> . LPAREN RPAREN

    LPAREN          shift and go to state 44

    formal_parameters              shift and go to state 43

state 21

    (3) program_block -> function_declarations declarations compound_statement .

    DOT             reduce using rule 3 (program_block -> function_declarations declarations compound_statement .)


state 22

    (23) compound_statement -> BEGIN statement_list . END
    (24) statement_list -> statement_list . SEMICOLON statement

    END             shift and go to state 45
    SEMICOLON       shift and go to state 46


state 23

    (25) statement_list -> statement .

    END             reduce using rule 25 (statement_list -> statement .)
    SEMICOLON       reduce using rule 25 (statement_list -> statement .)


state 24

    (26) statement -> assignment_statement .

    END             reduce using rule 26 (statement -> assignment_statement .)
    SEMICOLON       reduce using rule 26 (statement -> assignment_statement .)
    ELSE            reduce using rule 26 (statement -> assignment_statement .)


state 25

    (27) statement -> if_statement .

    END             reduce using rule 27 (statement -> if_statement .)
    SEMICOLON       reduce using rule 27 (statement -> if_statement .)
    ELSE            reduce using rule 27 (statement -> if_statement .)


state 26

    (28) statement -> while_statement .

    END             reduce using rule 28 (statement -> while_statement .)
    SEMICOLON       reduce using rule 28 (statement -> while_statement .)
    ELSE            reduce using rule 28 (statement -> while_statement .)


state 27

    (29) statement -> for_statement .

    END             reduce using rule 29 (statement -> for_statement .)
    SEMICOLON       reduce using rule 29 (statement -> for_statement .)
    ELSE            reduce using rule 29 (statement -> for_statement .)


state 28

    (30) statement -> procedure_call .

    END             reduce using rule 30 (statement -> procedure_call .)
    SEMICOLON       reduce using rule 30 (statement -> procedure_call .)
    ELSE            reduce using rule 30 (statement -> procedure_call .)


state 29

    (31) statement -> compound_statement .

    END             reduce using rule 31 (statement -> compound_statement .)
    SEMICOLON       reduce using rule 31 (statement -> compound_statement .)
    ELSE            reduce using rule 31 (statement -> compound_statement .)


state 30

    (32) statement -> empty .

    END             reduce using rule 32 (statement -> empty .)
    SEMICOLON       reduce using rule 32 (statement -> empty .)
    ELSE            reduce using rule 32 (statement -> empty .)


state 31

    (33) assignment_statement -> variable . ASSIGN expression

    ASSIGN          shift and go to state 47


state 32

    (34) if_statement -> IF . expression THEN statement
    (35) if_statement -> IF . expression THEN statement ELSE statement
    (53) expression -> . simple_expression
    (54) expression -> . simple_expression relational_operator simple_expression
    (72) expression -> . expression AND expression
    (73) expression -> . expression OR expression
    (74) expression -> . NOT expression
    (61) simple_expression -> . term
    (62) simple_expression -> . simple_expression additive_operator term
    (65) term -> . factor
    (66) term -> . term multiplicative_operator factor
    (75) factor -> . variable
    (76) factor -> . INTEGER_CONST
    (77) factor -> . REAL_CONST
    (78) factor -> . STRING_CONST
    (79) factor -> . LPAREN expression RPAREN
    (80) factor -> . function_call
    (81) factor -> . TRUE
    (82) factor -> . FALSE
    (85) variable -> . ID
    (86) variable -> . ID LBRACKET expression RBRACKET
    (83) function_call -> . ID LPAREN expression_list RPAREN
    (84) function_call -> . ID LPAREN RPAREN

    NOT             shift and go to state 50
    INTEGER_CONST   shift and go to state 54
    REAL_CONST      shift and go to state 55
    STRING_CONST    shift and go to state 56
    LPAREN          shift and go to state 57
    TRUE            shift and go to state 59
    FALSE           shift and go to state 60
    ID              shift and go to state 61

    expression                     shift and go to state 48
    simple_expression              shift and go to state 49
    term                           shift and go to state 51
    factor                         shift and go to state 52
    variable                       shift and go to state 53
    function_call                  shift and go to state 58

state 33

    (36) while_statement -> WHILE . expression DO statement
    (53) expression -> . simple_expression
    (54) expression -> . simple_expression relational_operator simple_expression
    (72) expression -> . expression AND expression
    (73) expression -> . expression OR expression
    (74) expression -> . NOT expression
    (61) simple_expression -> . term
    (62) simple_expression -> . simple_expression additive_operator term
    (65) term -> . factor
    (66) term -> . term multiplicative_operator factor
    (75) factor -> . variable
    (76) factor -> . INTEGER_CONST
    (77) factor -> . REAL_CONST
    (78) factor -> . STRING_CONST
    (79) factor -> . LPAREN expression RPAREN
    (80) factor -> . function_call
    (81) factor -> . TRUE
    (82) factor -> . FALSE
    (85) variable -> . ID
    (86) variable -> . ID LBRACKET expression RBRACKET
    (83) function_call -> . ID LPAREN expression_list RPAREN
    (84) function_call -> . ID LPAREN RPAREN

    NOT             shift and go to state 50
    INTEGER_CONST   shift and go to state 54
    REAL_CONST      shift and go to state 55
    STRING_CONST    shift and go to state 56
    LPAREN          shift and go to state 57
    TRUE            shift and go to state 59
    FALSE           shift and go to state 60
    ID              shift and go to state 61

    expression                     shift and go to state 62
    simple_expression              shift and go to state 49
    term                           shift and go to state 51
    factor                         shift and go to state 52
    variable                       shift and go to state 53
    function_call                  shift and go to state 58

state 34

    (37) for_statement -> FOR . ID ASSIGN expression TO expression DO statement
    (38) for_statement -> FOR . ID ASSIGN expression DOWNTO expression DO statement

    ID              shift and go to state 63


state 35

    (39) procedure_call -> ID . LPAREN expression_list RPAREN
    (40) procedure_call -> ID . LPAREN RPAREN
    (85) variable -> ID .
    (86) variable -> ID . LBRACKET expression RBRACKET

    LPAREN          shift and go to state 64
    ASSIGN          reduce using rule 85 (variable -> ID .)
    LBRACKET        shift and go to state 65


state 36

    (41) procedure_call -> WRITELN . LPAREN expression_list RPAREN
    (42) procedure_call -> WRITELN . LPAREN RPAREN

    LPAREN          shift and go to state 66


state 37

    (43) procedure_call -> WRITE . LPAREN expression_list RPAREN
    (44) procedure_call -> WRITE . LPAREN RPAREN

    LPAREN          shift and go to state 67


state 38

    (45) procedure_call -> READLN . LPAREN variable_list RPAREN
    (46) procedure_call -> READLN . LPAREN RPAREN

    LPAREN          shift and go to state 68


state 39

    (47) procedure_call -> READ . LPAREN variable_list RPAREN
    (48) procedure_call -> READ . LPAREN RPAREN

    LPAREN          shift and go to state 69


state 40

    (7) declaration_list -> declaration_list declaration .

    ID              reduce using rule 7 (declaration_list -> declaration_list declaration .)
    BEGIN           reduce using rule 7 (declaration_list -> declaration_list declaration .)


state 41

    (9) declaration -> id_list COLON . type SEMICOLON
    (18) type -> . INTEGER
    (19) type -> . BOOLEAN
    (20) type -> . STRING
    (21) type -> . array_type
    (22) array_type -> . ARRAY LBRACKET INTEGER_CONST DOTDOT INTEGER_CONST RBRACKET OF type

    INTEGER         shift and go to state 71
    BOOLEAN         shift and go to state 72
    STRING          shift and go to state 73
    ARRAY           shift and go to state 75

    type                           shift and go to state 70
    array_type                     shift and go to state 74

state 42

    (16) id_list -> id_list COMMA . ID

    ID              shift and go to state 76


state 43

    (11) function_declaration -> FUNCTION ID formal_parameters . COLON type SEMICOLON block SEMICOLON

    COLON           shift and go to state 77


state 44

    (12) formal_parameters -> LPAREN . parameter_list RPAREN
    (13) formal_parameters -> LPAREN . RPAREN
    (14) parameter_list -> . parameter
    (15) parameter -> . id_list COLON type
    (16) id_list -> . id_list COMMA ID
    (17) id_list -> . ID

    RPAREN          shift and go to state 79
    ID              shift and go to state 19

    parameter_list                 shift and go to state 78
    parameter                      shift and go to state 80
    id_list                        shift and go to state 81

state 45

    (23) compound_statement -> BEGIN statement_list END .

    DOT             reduce using rule 23 (compound_statement -> BEGIN statement_list END .)
    END             reduce using rule 23 (compound_statement -> BEGIN statement_list END .)
    SEMICOLON       reduce using rule 23 (compound_statement -> BEGIN statement_list END .)
    ELSE            reduce using rule 23 (compound_statement -> BEGIN statement_list END .)


state 46

    (24) statement_list -> statement_list SEMICOLON . statement
    (26) statement -> . assignment_statement
    (27) statement -> . if_statement
    (28) statement -> . while_statement
    (29) statement -> . for_statement
    (30) statement -> . procedure_call
    (31) statement -> . compound_statement
    (32) statement -> . empty
    (33) assignment_statement -> . variable ASSIGN expression
    (34) if_statement -> . IF expression THEN statement
    (35) if_statement -> . IF expression THEN statement ELSE statement
    (36) while_statement -> . WHILE expression DO statement
    (37) for_statement -> . FOR ID ASSIGN expression TO expression DO statement
    (38) for_statement -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (39) procedure_call -> . ID LPAREN expression_list RPAREN
    (40) procedure_call -> . ID LPAREN RPAREN
    (41) procedure_call -> . WRITELN LPAREN expression_list RPAREN
    (42) procedure_call -> . WRITELN LPAREN RPAREN
    (43) procedure_call -> . WRITE LPAREN expression_list RPAREN
    (44) procedure_call -> . WRITE LPAREN RPAREN
    (45) procedure_call -> . READLN LPAREN variable_list RPAREN
    (46) procedure_call -> . READLN LPAREN RPAREN
    (47) procedure_call -> . READ LPAREN variable_list RPAREN
    (48) procedure_call -> . READ LPAREN RPAREN
    (23) compound_statement -> . BEGIN statement_list END
    (87) empty -> .
    (85) variable -> . ID
    (86) variable -> . ID LBRACKET expression RBRACKET

    IF              shift and go to state 32
    WHILE           shift and go to state 33
    FOR             shift and go to state 34
    ID              shift and go to state 35
    WRITELN         shift and go to state 36
    WRITE           shift and go to state 37
    READLN          shift and go to state 38
    READ            shift and go to state 39
    BEGIN           shift and go to state 15
    END             reduce using rule 87 (empty -> .)
    SEMICOLON       reduce using rule 87 (empty -> .)

    statement                      shift and go to state 82
    assignment_statement           shift and go to state 24
    if_statement                   shift and go to state 25
    while_statement                shift and go to state 26
    for_statement                  shift and go to state 27
    procedure_call                 shift and go to state 28
    compound_statement             shift and go to state 29
    empty                          shift and go to state 30
    variable                       shift and go to state 31

state 47

    (33) assignment_statement -> variable ASSIGN . expression
    (53) expression -> . simple_expression
    (54) expression -> . simple_expression relational_operator simple_expression
    (72) expression -> . expression AND expression
    (73) expression -> . expression OR expression
    (74) expression -> . NOT expression
    (61) simple_expression -> . term
    (62) simple_expression -> . simple_expression additive_operator term
    (65) term -> . factor
    (66) term -> . term multiplicative_operator factor
    (75) factor -> . variable
    (76) factor -> . INTEGER_CONST
    (77) factor -> . REAL_CONST
    (78) factor -> . STRING_CONST
    (79) factor -> . LPAREN expression RPAREN
    (80) factor -> . function_call
    (81) factor -> . TRUE
    (82) factor -> . FALSE
    (85) variable -> . ID
    (86) variable -> . ID LBRACKET expression RBRACKET
    (83) function_call -> . ID LPAREN expression_list RPAREN
    (84) function_call -> . ID LPAREN RPAREN

    NOT             shift and go to state 50
    INTEGER_CONST   shift and go to state 54
    REAL_CONST      shift and go to state 55
    STRING_CONST    shift and go to state 56
    LPAREN          shift and go to state 57
    TRUE            shift and go to state 59
    FALSE           shift and go to state 60
    ID              shift and go to state 61

    variable                       shift and go to state 53
    expression                     shift and go to state 83
    simple_expression              shift and go to state 49
    term                           shift and go to state 51
    factor                         shift and go to state 52
    function_call                  shift and go to state 58

state 48

    (34) if_statement -> IF expression . THEN statement
    (35) if_statement -> IF expression . THEN statement ELSE statement
    (72) expression -> expression . AND expression
    (73) expression -> expression . OR expression

    THEN            shift and go to state 84
    AND             shift and go to state 85
    OR              shift and go to state 86


state 49

    (53) expression -> simple_expression .
    (54) expression -> simple_expression . relational_operator simple_expression
    (62) simple_expression -> simple_expression . additive_operator term
    (55) relational_operator -> . EQUAL
    (56) relational_operator -> . NOTEQUAL
    (57) relational_operator -> . LESSTHAN
    (58) relational_operator -> . LESSEQUAL
    (59) relational_operator -> . GREATERTHAN
    (60) relational_operator -> . GREATEREQUAL
    (63) additive_operator -> . PLUS
    (64) additive_operator -> . MINUS

    THEN            reduce using rule 53 (expression -> simple_expression .)
    AND             reduce using rule 53 (expression -> simple_expression .)
    OR              reduce using rule 53 (expression -> simple_expression .)
    DO              reduce using rule 53 (expression -> simple_expression .)
    END             reduce using rule 53 (expression -> simple_expression .)
    SEMICOLON       reduce using rule 53 (expression -> simple_expression .)
    ELSE            reduce using rule 53 (expression -> simple_expression .)
    RPAREN          reduce using rule 53 (expression -> simple_expression .)
    COMMA           reduce using rule 53 (expression -> simple_expression .)
    RBRACKET        reduce using rule 53 (expression -> simple_expression .)
    TO              reduce using rule 53 (expression -> simple_expression .)
    DOWNTO          reduce using rule 53 (expression -> simple_expression .)
    EQUAL           shift and go to state 89
    NOTEQUAL        shift and go to state 90
    LESSTHAN        shift and go to state 91
    LESSEQUAL       shift and go to state 92
    GREATERTHAN     shift and go to state 93
    GREATEREQUAL    shift and go to state 94
    PLUS            shift and go to state 95
    MINUS           shift and go to state 96

    relational_operator            shift and go to state 87
    additive_operator              shift and go to state 88

state 50

    (74) expression -> NOT . expression
    (53) expression -> . simple_expression
    (54) expression -> . simple_expression relational_operator simple_expression
    (72) expression -> . expression AND expression
    (73) expression -> . expression OR expression
    (74) expression -> . NOT expression
    (61) simple_expression -> . term
    (62) simple_expression -> . simple_expression additive_operator term
    (65) term -> . factor
    (66) term -> . term multiplicative_operator factor
    (75) factor -> . variable
    (76) factor -> . INTEGER_CONST
    (77) factor -> . REAL_CONST
    (78) factor -> . STRING_CONST
    (79) factor -> . LPAREN expression RPAREN
    (80) factor -> . function_call
    (81) factor -> . TRUE
    (82) factor -> . FALSE
    (85) variable -> . ID
    (86) variable -> . ID LBRACKET expression RBRACKET
    (83) function_call -> . ID LPAREN expression_list RPAREN
    (84) function_call -> . ID LPAREN RPAREN

    NOT             shift and go to state 50
    INTEGER_CONST   shift and go to state 54
    REAL_CONST      shift and go to state 55
    STRING_CONST    shift and go to state 56
    LPAREN          shift and go to state 57
    TRUE            shift and go to state 59
    FALSE           shift and go to state 60
    ID              shift and go to state 61

    expression                     shift and go to state 97
    simple_expression              shift and go to state 49
    term                           shift and go to state 51
    factor                         shift and go to state 52
    variable                       shift and go to state 53
    function_call                  shift and go to state 58

state 51

    (61) simple_expression -> term .
    (66) term -> term . multiplicative_operator factor
    (67) multiplicative_operator -> . TIMES
    (68) multiplicative_operator -> . DIVIDE
    (69) multiplicative_operator -> . DIV
    (70) multiplicative_operator -> . MOD
    (71) multiplicative_operator -> . AND

  ! shift/reduce conflict for AND resolved as shift
    EQUAL           reduce using rule 61 (simple_expression -> term .)
    NOTEQUAL        reduce using rule 61 (simple_expression -> term .)
    LESSTHAN        reduce using rule 61 (simple_expression -> term .)
    LESSEQUAL       reduce using rule 61 (simple_expression -> term .)
    GREATERTHAN     reduce using rule 61 (simple_expression -> term .)
    GREATEREQUAL    reduce using rule 61 (simple_expression -> term .)
    PLUS            reduce using rule 61 (simple_expression -> term .)
    MINUS           reduce using rule 61 (simple_expression -> term .)
    THEN            reduce using rule 61 (simple_expression -> term .)
    OR              reduce using rule 61 (simple_expression -> term .)
    DO              reduce using rule 61 (simple_expression -> term .)
    END             reduce using rule 61 (simple_expression -> term .)
    SEMICOLON       reduce using rule 61 (simple_expression -> term .)
    ELSE            reduce using rule 61 (simple_expression -> term .)
    RPAREN          reduce using rule 61 (simple_expression -> term .)
    COMMA           reduce using rule 61 (simple_expression -> term .)
    RBRACKET        reduce using rule 61 (simple_expression -> term .)
    TO              reduce using rule 61 (simple_expression -> term .)
    DOWNTO          reduce using rule 61 (simple_expression -> term .)
    TIMES           shift and go to state 99
    DIVIDE          shift and go to state 100
    DIV             shift and go to state 101
    MOD             shift and go to state 102
    AND             shift and go to state 103

  ! AND             [ reduce using rule 61 (simple_expression -> term .) ]

    multiplicative_operator        shift and go to state 98

state 52

    (65) term -> factor .

    TIMES           reduce using rule 65 (term -> factor .)
    DIVIDE          reduce using rule 65 (term -> factor .)
    DIV             reduce using rule 65 (term -> factor .)
    MOD             reduce using rule 65 (term -> factor .)
    AND             reduce using rule 65 (term -> factor .)
    EQUAL           reduce using rule 65 (term -> factor .)
    NOTEQUAL        reduce using rule 65 (term -> factor .)
    LESSTHAN        reduce using rule 65 (term -> factor .)
    LESSEQUAL       reduce using rule 65 (term -> factor .)
    GREATERTHAN     reduce using rule 65 (term -> factor .)
    GREATEREQUAL    reduce using rule 65 (term -> factor .)
    PLUS            reduce using rule 65 (term -> factor .)
    MINUS           reduce using rule 65 (term -> factor .)
    THEN            reduce using rule 65 (term -> factor .)
    OR              reduce using rule 65 (term -> factor .)
    DO              reduce using rule 65 (term -> factor .)
    END             reduce using rule 65 (term -> factor .)
    SEMICOLON       reduce using rule 65 (term -> factor .)
    ELSE            reduce using rule 65 (term -> factor .)
    RPAREN          reduce using rule 65 (term -> factor .)
    COMMA           reduce using rule 65 (term -> factor .)
    RBRACKET        reduce using rule 65 (term -> factor .)
    TO              reduce using rule 65 (term -> factor .)
    DOWNTO          reduce using rule 65 (term -> factor .)


state 53

    (75) factor -> variable .
